feat: R session state and events added