@@ -10,8 +10,10 @@
 package org.obiba.opal.web.r;
 
 import com.google.common.base.Strings;
-import com.google.common.collect.Lists;
-import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.ForbiddenException;
+import jakarta.ws.rs.core.PathSegment;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.UriInfo;
 import org.obiba.opal.r.service.OpalRSessionManager;
 import org.obiba.opal.r.service.RServerManagerService;
 import org.obiba.opal.r.service.RServerProfile;
@@ -24,13 +26,9 @@ import org.springframework.context.annotation.Scope;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
-import jakarta.ws.rs.ForbiddenException;
-import jakarta.ws.rs.core.PathSegment;
-import jakarta.ws.rs.core.Response;
-import jakarta.ws.rs.core.UriInfo;
 import java.net.URI;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
 
 /**
  * Handles the list and the creation of the R sessions of the invoking Opal user.
@@ -60,7 +58,7 @@ public class RSessionsResourceImpl implements RSessionsResource {
   public List<OpalR.RSessionDto> getRSessions() {
     return opalRSessionManager.getSubjectRSessions().stream()
         .map(Dtos::asDto)
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @Override
@@ -70,23 +68,22 @@ public class RSessionsResourceImpl implements RSessionsResource {
   }
 
   @Override
-  public Response newRSession(UriInfo info, String restore, String profile, boolean async) {
+  public Response newRSession(UriInfo info, String restore, String profile, boolean wait) {
     if (!createRSessionEnabled())
       throw new ForbiddenException("Plain R service endpoint is not enabled");
-    if (async) {
-      String id = opalRSessionManager.newSubjectRSessionAsync(createProfile(profile));
-      URI location = getLocation(info, String.format("command/%s", id));
-      return Response.created(location).entity(id).type(MediaType.TEXT_PLAIN_TYPE).build();
-    } else {
-      RServerSession rSession = opalRSessionManager.newSubjectRSession(createProfile(profile));
-      onNewRSession(rSession);
-      if (!Strings.isNullOrEmpty(restore)) {
-        opalRSessionManager.restoreSubjectRSession(rSession.getId(), restore);
+    RServerSession rSession = opalRSessionManager.newSubjectRSession(createProfile(profile));
+    onNewRSession(rSession);
+    if (wait || !Strings.isNullOrEmpty(restore)) {
+      RSessionStateRunnable runnable = new RSessionStateRunnable(rSession, restore);
+      if (wait) {
+        runnable.run();
+      } else {
+        executeAsync(runnable);
       }
-      URI location = getLocation(info, rSession.getId());
-      return Response.created(location).entity(Dtos.asDto(rSession))
-              .build();
     }
+    URI location = getLocation(info, rSession.getId());
+    return Response.created(location).entity(Dtos.asDto(rSession))
+        .build();
   }
 
   @Override
@@ -126,7 +123,35 @@ public class RSessionsResourceImpl implements RSessionsResource {
     return info.getBaseUriBuilder().path(root.toString()).path(id).build();
   }
 
-  public class DefaultRServerProfile implements RServerProfile {
+  private class RSessionStateRunnable implements Runnable {
+
+    private final RServerSession rSession;
+    private final String restore;
+
+    public RSessionStateRunnable(RServerSession rSession, String restore) {
+      this.rSession = rSession;
+      this.restore = restore;
+    }
+
+    @Override
+    public void run() {
+      while (RServerSession.State.PENDING.equals(rSession.getState())) {
+        try {
+          Thread.sleep(100);
+        } catch (InterruptedException e) {}
+      }
+      if (RServerSession.State.RUNNING.equals(rSession.getState()) && !Strings.isNullOrEmpty(restore)) {
+        opalRSessionManager.restoreSubjectRSession(rSession.getId(), restore);
+      }
+    }
+  }
+
+  // Execute without waiting
+  private static void executeAsync(Runnable task) {
+    CompletableFuture.runAsync(task);
+  }
+
+  public static class DefaultRServerProfile implements RServerProfile {
 
     private final String name;
 
